# GarbageCollector3

./: Cargo.toml  README.md  Trunk.toml  build.sh  flake.nix
.github/workflows/: static.yml
apps/: keyring.py  placeholder.py  terminal.py  ui.py  vec.py  weather.py
apps/assets/: convert.py
assets/: player-skin.sh  world-codegen.sh
assets/player/: pose.aseprite
html/: garbage_collector3.d.ts  garbage_collector3.js  garbage_collector3_bg.wasm.d.ts  index.html
html/.stage/: 7b856bca110c79c6-initializer.mjs  garbage_collector3-2c59050b93f0d8fd.js
src/: assets.rs  controls.rs  main.rs  player.rs  world.ldtk  world.rs
src/watch/: mod.rs
src/watch/interpreter/: mod.rs  pywatch.rs
