[package]
name = "garbage_collector3"
version = "0.1.0"
edition = "2021"

[dependencies]
console_error_panic_hook = "0.1.7"
wasm-logger = "0.2.0"
web-sys = "0.3.70"

speedy2d = "2.1.0"
rand = "0.8.5"

rustpython = { version = "0.4.0", default-features = false, features = [
    "freeze-stdlib",
    "stdlib",
] }
rustpython-vm = "0.4.0"
